# task_management_app

./: .gitignore  README.md  db.sqlite3  pyproject.toml
basic_token_auth/: apps.py  exceptions.py  models.py  token_authentication.py  views.py
basic_token_auth/migrations/: 0001_initial.py
task_app/: admin.py  apps.py  inject.py  models.py  urls.py
task_app/migrations/: 0001_initial.py  0002_auto_20240614_1022.py  0003_task_is_deleted.py
task_app/task/: exceptions.py  inject.py
task_app/task/data/: task_abstract_repo.py  task_db_repo.py
task_app/task/domain/: domain_models.py
task_app/task/domain/use_cases/: create_task_use_case.py  delete_task_use_case.py  get_task_by_id.py  get_task_by_id_use_case.py  list_all_tasks_use_case.py  list_task_by_status.py  list_task_by_status_use_case.py  update_task_use_case.py
task_app/task/presentation/: types.py  urls.py  views.py
task_app/task/tests/: factories.py
task_app/task/tests/data/: test_db_repo.py
task_app/task/tests/domain/: test_create_task_use_case.py  test_delete_task_use_case.py  test_get_task_by_id.py  test_list_all_tasks_use_case.py  test_list_tasks_by_status_use_case.py  test_update_task_use_case.py
task_app/task/tests/presentation/: test_create_task_view.py  test_delete_task_view.py  test_get_task_by_id_view.py  test_list_all_tasks_view.py  test_list_tasks_by_status_view.py  test_update_task_view.py
task_management_app/: asgi.py  settings.py  urls.py  wsgi.py
utils/: api_tests.py  test_fixtures.py
